--- a/charts/examples/templates/statefulset.yaml
+++ b/charts/examples/templates/statefulset.yaml
@@ -1,12 +1,13 @@
+{{- /* Stateful Set */ -}}
 {{- include "common.statefulset" (list . .Values "example.statefulset") -}}
 
-{{- /* Deplyment overrides*/ -}}
+{{- /* Stateful Set overrides*/ -}}
 {{- define "example.statefulset" -}}
 spec:
   template:
     spec:
       containers:
-      - {{- include "common.container" (list . .Values "example.container") | nindent 8 }}
+      - {{- include "common.container" (list . .Values "example.statefulset.container") | nindent 8 }}
       volumes:
       - name: nginx-html
         configMap:
@@ -14,7 +15,7 @@ spec:
 {{- end -}}
 
 {{- /* Container overrides */ -}}
-{{- define "example.container" -}}
+{{- define "example.statefulset.container" -}}
 ports:
 - name: http
   containerPort: 80
